# cvmfs-status-page-rust

./: Cargo.toml  README.md  config.json
resources/: status.css  status.js
src/: config.rs  dependecies.rs  dependencies.rs  main.rs  models.rs  prometheus.rs  templating.rs
templates/: status.html
