[package]
name = "cvmfs-status-page-rust"
version = "0.0.1"
edition = "2021"

[dependencies]
cvmfs_server_scraper = "0.0.5"
futures = "0"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1"
env_logger = "*"
tera = "1"
chrono = "0"
include_dir = "0"
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
yare = "3"
rhai = "1"
log = "0.4"
tempfile = "3"
anyhow = "1"
strum = "0"
strum_macros = "0"
